# anda-cloud

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: release.yml
declarations/anda_cloud_website/: anda_cloud_website.mo  index.js
declarations/anda_registry_canister/: anda_registry_canister.did  anda_registry_canister.did.d.ts  anda_registry_canister.did.js  anda_registry_canister.mo  index.d.ts  index.js
declarations/anda_x402_canister/: anda_x402_canister.did  anda_x402_canister.did.d.ts  anda_x402_canister.did.js  anda_x402_canister.mo  index.d.ts  index.js
examples/ts/anda_x402/: app.ts  dev.ts  package.json  tsconfig.json
proposals/: proposal-440.sh  proposal-453.sh  proposal-454.sh  proposal-457.sh
rs/anda_cloud_cdk/: Cargo.toml  README.md
rs/anda_cloud_cdk/src/: agent.rs  lib.rs  registry.rs  tee.rs  x402.rs
rs/anda_discovery_service/: Cargo.toml  README.md
rs/anda_gateway_service/: Cargo.toml  README.md
rs/anda_payment_service/: Cargo.toml  README.md
rs/anda_registry_canister/: Cargo.toml  README.md  anda_registry_canister.did
rs/anda_registry_canister/src/: api.rs  api_admin.rs  api_http.rs  api_init.rs  lib.rs  store.rs
rs/anda_registry_canister/tests/: anda_registry_canister.rs  anda_registry_canister_test.rs
rs/anda_x402_canister/: Cargo.toml  README.md
rs/anda_x402_canister/src/: api.rs  api_admin.rs  api_http.rs  api_init.rs  helper.rs  lib.rs  store.rs
src/declarations/anda_cloud_website/: anda_cloud_website.did.d.ts  index.d.ts  index.js
ts/anda_cloud_website/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
ts/anda_cloud_website/src/: app.css  app.html
ts/anda_cloud_website/src/lib/animations/: motion.ts  neuralGrid.ts
ts/anda_cloud_website/src/lib/components/: CTASection.svelte  EcosystemGrid.svelte  FeatureCard.svelte  Footer.svelte  Hero.svelte  HeroVisual.svelte  NavBar.svelte  SectionHeading.svelte
ts/anda_cloud_website/src/lib/components/projects/: AndaCloudSection.svelte  AndaDBSection.svelte  AndaSection.svelte  KIPSection.svelte  X402Section.svelte
ts/anda_cloud_website/src/lib/icons/: red-love.svelte
ts/anda_cloud_website/src/lib/stores/: activeSection.ts
ts/anda_cloud_website/src/lib/styles/: theme.css
ts/anda_cloud_website/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ts/anda_cloud_website/static/: .ic-assets.json  index.html
ts/anda_cloud_website/static/.well-known/: apple-app-site-association  ic-domains
ts/anda_cloud_website/static/_assets/css/: landing.css
ts/anda_cloud_website/static/_assets/js/: landing.js
ts/anda_cloud_website/static/deeplink/: index.html
ts/anda_x402/: README.md  package.json  pnpm-lock.yaml
ts/anda_x402/candid/anda_x402_canister/: anda_x402_canister.did  anda_x402_canister.did.d.ts  anda_x402_canister.did.js  anda_x402_canister.mo
ts/anda_x402/src/: index.ts  types.ts  x402.test.ts  x402.ts
