[workspace]
members = ["rs/anda_cloud_cdk", "rs/anda_registry_canister"]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.1.3"
edition = "2024"
repository = "https://github.com/ldclabs/anda-cloud"
keywords = ["anda", "agent", "icp", "cloud"]
categories = ["web-programming"]
license = "MIT"

[workspace.dependencies]
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
serde = "1"
serde_bytes = "0.11"
serde_json = "1.0"
sha3 = "0.10"
ic-cdk = "0.18"
ic-agent = "0.40"
ic-http-certification = "3"
ic-stable-structures = "0.6"
ic_auth_types = { version = "0.4" }
ic_auth_verifier = { version = "0.4" }
ic_tee_nitro_attestation = { version = "0.4" }
lazy_static = "1.5"
once_cell = "1.21"
url = "2.5"
thiserror = "2"
rand = "0.9"
tokio = { version = "1" }
pocket-ic = "9"
ed25519-consensus = "2.1"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
