[package]
name = "anda_cloud_cdk"
description = "A Canister Development Kit for the Anda Cloud"
repository = "https://github.com/ldclabs/anda-cloud/tree/main/src/anda_cloud_cdk"
version = "0.1.1"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
ic_auth_types = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["envelope"] }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
