[package]
name = "anda_x402_canister"
description = "A fully on-chain x402 payment facilitator on the Internet Computer."
repository = "https://github.com/ldclabs/anda-cloud/tree/main/src/anda_x402_canister"
publish = false
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anda_cloud_cdk = { path = "../anda_cloud_cdk", version = "0.3" }
base64 = { workspace = true }
candid = { workspace = true, features = ["value", "printer"] }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
ic_auth_types = { workspace = true }
num-traits = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
ic-dummy-getrandom-for-wasm = "0.1"

[dev-dependencies]
